[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/Fight.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "fighting_2"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AttackerSprite1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, -16 ), Vector2( 10, -8 ), Vector2( 10, -16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackerSprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -10, -16 ), Vector2( -10, -8 ), Vector2( -10, -16 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fighting_3"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AttackerSprite1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 0, -8 ), Vector2( 0, -16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackerSprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -18, -16 ), Vector2( -18, -16 ), Vector2( -18, -8 ), Vector2( -18, -16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackerSprite3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 18, -16 ), Vector2( 18, -16 ), Vector2( 18, -8 ), Vector2( 18, -16 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fighting_2"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DefenderSprite1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 16 ), Vector2( 10, 8 ), Vector2( 10, 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DefenderSprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -10, 16 ), Vector2( -10, 8 ), Vector2( -10, 16 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fighting_3"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DefenderSprite1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 16 ), Vector2( 0, 8 ), Vector2( 0, 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DefenderSprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -18, 16 ), Vector2( -18, 16 ), Vector2( -18, 8 ), Vector2( -18, 16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DefenderSprite3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 18, 16 ), Vector2( 18, 16 ), Vector2( 18, 8 ), Vector2( 18, 16 ) ]
}

[node name="FightScene" type="Position2D"]
position = Vector2( 32, 32 )
script = ExtResource( 2 )

[node name="AttackerSprite1" type="Sprite" parent="."]
position = Vector2( 0, -8.85391 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="AttackerSprite2" type="Sprite" parent="."]
visible = false
position = Vector2( -18, -16 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="AttackerSprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 18, -16 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="DefenderSprite1" type="Sprite" parent="."]
position = Vector2( 0, 14.6619 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="DefenderSprite2" type="Sprite" parent="."]
visible = false
position = Vector2( -18, 8.66193 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="DefenderSprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 18, 8.66193 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="AttackerAnimations" type="AnimationPlayer" parent="."]
anims/fighting_2 = SubResource( 1 )
anims/fighting_3 = SubResource( 2 )

[node name="DefenderAnimations" type="AnimationPlayer" parent="."]
anims/fighting_2 = SubResource( 3 )
anims/fighting_3 = SubResource( 4 )
